Fix checkmark problem and bad spacing

--- a/prototype/css/abet.css
+++ b/prototype/css/abet.css
@@ -326,7 +326,7 @@ html
 }
 
 #sum_table {
-    padding-left: 76px;
+    padding-left: 70px;
 }
 
 #courseOutcomeRow {
